--- a/src/components/ProfilePage/RecipientPage.css
+++ b/src/components/ProfilePage/RecipientPage.css
@@ -1,6 +1,5 @@
 .avatar-offset {
-    position: relative;
-    top: -90px;
+    margin-top: -90px;
     outline: 4px solid #222;
     border-radius: 50%;
 
@@ -13,4 +12,65 @@
 
 .status-text {
     font-size: 18px;
+}
+
+.user-main-info {
+    margin-top: 100px !important;
+    font-size: 32px;
+
+    text-align: left;
+    margin: 20px auto;
+    width: 100%;
+    height: calc(100% - 440px);
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 0;
+}
+
+.add-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 20px;
+}
+
+.block-padding {
+    padding: 20px 40px !important;
+}
+
+.user-main-info__text {
+    text-align: left;
+    font-size: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    height: min-content;
+}
+
+@media (max-width: 900px) {
+    .avatar-offset {
+    }
+
+    .user-main-info {
+        width: 80%;
+    }
+}
+
+@media (max-width: 700px) {
+    .avatar-offset {
+        margin: 0 auto;
+        position: static;
+    }
+
+    .user-main-info {
+        flex-direction: column;
+        width: 80%;
+        height: min-content;
+    }
+
+    .user-main-info__text {
+        padding-bottom: 30px;
+    }
 }
