--- a/src/components/RecipientsPage/RecipientsPage.css
+++ b/src/components/RecipientsPage/RecipientsPage.css
@@ -11,7 +11,7 @@
 .grid-block {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     grid-template-columns: 1fr 1fr 1fr;
     min-width: 500px;
