--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
 button {
     font-weight: 500 !important;
     font-family: "Inter" !important;
-    background-color: #d8dbdf !important;
+    background-color: #fff !important;
 }
 button:hover {
     background-color: #d8dbdf !important;
