--- a/src/pages/StartPage/StartPage.css
+++ b/src/pages/StartPage/StartPage.css
@@ -5,32 +5,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
 }
 
 .start-page__title {
-    width: 80%;
-    margin: 0 auto 10px;
     font-size: 35px;
 }
 
 .start-page__desc {
-    width: 80%;
-    margin: 0 auto;
     font-size: 20px;
 }
 
-@media (max-width: 700px) {
-    .start-page__title {
-        width: 90%;
-        margin: 0 auto 10px;
-        font-size: 35px;
-    }
+.Carousel {
+    margin-top: 50px;
+}
 
-    .start-page__desc {
-        text-align: left;
-        width: 90%;
-        margin: 0 auto;
-        font-size: 20px;
-    }
+.CarouselImage {
+    width: 500px;
+    border-radius: 5px;
+    border: 1px #99999954 dashed;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    display: none;
 }
